Separated backend and frontend Docker images and containers. The markup is now more adaptive (relative font-sizes, added flex-wraps, fixed cropping on the left edge) and is usable on mobile devices.

--- a/static/index_style.css
+++ b/static/index_style.css
@@ -5,11 +5,16 @@
     font-style: normal;
 }
 
-
+html {
+    font-size: 150%;
+    overflow: scroll;
+    margin: 0px;
+    padding: 0px;
+}
 body {
     background: #171717;
     font-family: "Bahnschrift", sans-serif;
-    font-size: 30px;
+    font-size: 1rem;
     color: white;
     margin: 0px;
     padding: 0px;
@@ -21,38 +26,33 @@ img {
 
 #super_main {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    height: 100vh;
 }
 
 #main, #little_main {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: start;
     border-radius: 25px;
-    padding: 25px;
 }
 
 #main {
-    max-width: 1920px; 
-    width: 100%;
-    align-items: stretch;
+    margin: auto;
 }
 
 #little_main {
     background:  #262626;
-    align-items: flex-start;
+    padding: 15px;
 }
 
 #header {
-    font-size: 60px;
+    font-size: 1.5rem;
     display: flex;
     flex-direction: row;
     justify-content: left;
     align-items: center;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
+    margin-top: 25px;
 }
 
 #filter {
@@ -72,13 +72,17 @@ img {
     align-items: center;
 }
 
+#filter_button {
+    margin-top: 5px;
+}
+
 #status_header, #date_header {
     cursor: pointer;
 }
 
 input, button {
     font-family: "Bahnschrift", sans-serif;
-    font-size: 40px;
+    font-size: 1.15rem;
     color: white;
     border: none;
     border-radius: 5px;
@@ -86,6 +90,7 @@ input, button {
     background: #3d3d3d;
     cursor: pointer; 
     padding: 5px;
+    max-width: 300px;
 }
 
 
@@ -100,7 +105,7 @@ input:active, button:active {
 
 #filter input, #filter button, dialog input, dialog button, dialog textarea {
     font-family: "Bahnschrift", sans-serif;
-    font-size: 30px;
+    font-size: 1.25rem;
     color: white;
     border: none;
     border-radius: 5px;
@@ -122,7 +127,7 @@ input:active, button:active {
 
 
 input[type="submit"], dialog input[type="submit"] {
-    font-size: 50px;
+    font-size: 1.25rem;
 }
 
 .div_margin {
@@ -130,7 +135,7 @@ input[type="submit"], dialog input[type="submit"] {
 }
 
 #exit_button {
-    font-size: 60px;
+    font-size: 1.5rem;
     border-radius: 15px;
     padding: 15px;
     margin-left: 15px;
@@ -157,7 +162,7 @@ select, dialog select {
     border-radius: 8px;
     padding: 5px;
     font-family: "Bahnschrift", sans-serif;
-    font-size: 25px; 
+    font-size: 1.25rem; 
     cursor: pointer; 
     outline: none; 
 }
@@ -221,7 +226,9 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
 }
 
 table {
-    width: 100%;
+    min-width: 200px;
+    max-width: 2000px;
+    font-size: 0.8rem;
     border-collapse: collapse;
     background-color: #2e2e2e;
     border-radius: 10px;
@@ -232,14 +239,14 @@ table {
 
 th {
     background-color: #363636;
-    padding: 12px 15px; 
+    padding: 15px 15px; 
     text-align: left; 
     border-bottom: 2px solid #555555; 
 }
 
 
 td {
-    padding: 12px 15px; 
+    padding: 15px 15px; 
     border-bottom: 1px solid #555555; 
 }
 
@@ -275,12 +282,13 @@ thead tr {
 
 dialog {
     font-family: "Bahnschrift", sans-serif;
-    font-size: 35px;
+    font-size: 1rem;
     color: white;
     background: #2e2e2e;
     border: 3px solid #454545;
     outline: none;
     border-radius: 15px;
+    padding: 10px;
 }
 
 dialog::backdrop {
@@ -290,18 +298,16 @@ dialog::backdrop {
 
 dialog textarea {
     resize: none;
-    font-size: 30px;
+    font-size: 1rem;
 }
-dialog button, dialog input, dialog select, dialog input[type="submit"] {
-    font-size: 35px;
-}
+
 
 p {
     margin: 10px;
 }
 
 .name_text {
-    font-size: 45px;
+    font-size: 1.3rem;
 }
 
 #close_button_add {
